--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-
 body
 {
   color: white;
-  background: rgb(157, 218, 182);
+  background: rgb(138, 223, 176);
 }
 span
 {
@@ -18,7 +17,7 @@ span
 {
   color: black;
 }
-.emotion_name
+.gesture_name
 {
   font-size: 40px;
 }
